--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@googlemaps/js-api-loader": "^1.16.2",
     "@types/google.maps": "^3.54.10",
     "bootstrap": "^5.3.2",
+    "dayjs": "^1.11.10",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.1",
